--- a/SettingsForms/TypeRoadForm.resx
+++ b/SettingsForms/TypeRoadForm.resx
@@ -117,6 +117,228 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="radioButton_road.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAD8AAAA/CAYAAABXXxDfAAAABGdBTUEAALGeYUxB9wAAACBjSFJNAACH
+        EAAAjBIAAP1NAACBPgAAWesAARIPAAA85gAAGc66ySIyAAABJmlDQ1BBZG9iZSBSR0IgKDE5OTgpAAAo
+        z2NgYDJwdHFyZRJgYMjNKykKcndSiIiMUmA/z8DGwMwABonJxQWOAQE+IHZefl4qAwb4do2BEURf1gWZ
+        xUAa4EouKCoB0n+A2CgltTiZgYHRAMjOLi8pAIozzgGyRZKywewNIHZRSJAzkH0EyOZLh7CvgNhJEPYT
+        ELsI6Akg+wtIfTqYzcQBNgfClgGxS1IrQPYyOOcXVBZlpmeUKBhaWloqOKbkJ6UqBFcWl6TmFit45iXn
+        FxXkFyWWpKYA1ULcBwaCEIWgENMAarTQZKAyAMUDhPU5EBy+jGJnEGIIkFxaVAZlMjIZE+YjzJgjwcDg
+        v5SBgeUPQsykl4FhgQ4DA/9UhJiaIQODgD4Dw745AMDGT/0ZOjZcAAAACXBIWXMAAAsTAAALEwEAmpwY
+        AAANQ0lEQVRoQ71ba3CeRRX+fih4GS9ACwW5KaN4Ge4I44wj44yM+suRGR0vPxyVGccWHHRQRJhB0Arp
+        FWlLWwTKRQRqxdIkvSZtk9DScgkUmq/J9yVNmkJvQEnSNCFtkuN5ztmzu++bt9Jxur4zT3f3nLO759k9
+        e3nfLy0R0XFhZHSs+cXmxoGV/3qy75nly/vqalf01dfVSlrr8lY2nS/XBdugq5N6Vq5jZMvari9zGpfj
+        /DP/Xt5Xv+yJvle2tAyMEz1c5H8RCoVFKL/8/M6ahY/QL9YfoZ9tJPpli2JqM6cMSwWQRzpvhzqcTnN6
+        q4ey6YqQaduVDdMYP1lPdEPjEN23eAl1tb1aX+R/EQqFRWhvqW+9o66dSnftorNnddKn/idUo9TyQS7t
+        zjZZQNxfUd9ncf0P1OylmStfp+0ba58q8r8IhcIiVLc2tNasrdKpNTvp0oWM+7s1ZVy2EHmH+53Mpao3
+        WbZOAMvYHqm39XmtE9tbX9pHN13C6emze2hBYwe1PbcqBfnG1prV7XTaTCUojkQO552OZSJ3dbyNOB7p
+        TM8DZO0KQdMjFTjiYqs2SM+c20vz15WpvGn1iSdf2cIzz+QngbzrvAhKLi83pyPCkS6UI8IuL/aOZBgw
+        5NUPlDHzZ87ZxTPfnmrmG1rvMfIyO84Z55jAOSczJVDnRO5kcdlsvc7JPExmcpf3ti4P8lOY/PyGHVRO
+        FfaBfN4JG5DglNcLwVDHy3OA7FjyoNd+8jYy8xz289a1MfkEYT+BvMwOE3azZGFsck1Vns1r/RDmWfvQ
+        tiG2K25PZn4uZp7XfIqZ1zXfEYV9IKBwcpePkXUadqGOyvO2sV7z1kbQGRx5W/Mtyda8kedOZQCQ11Qc
+        NzmcMrmDhuuxdJCFukI0I4OdywvYxqWaj3b7NGGfIw+yQtilcFDSeHZNp4QEsIfDXheVUQekfBvQow7a
+        giwH19YlnCZe89nd3hyXWYkgMudUVqcO68zHOs0rIWtX89m6Jre62hbkRj7Zbm9r3i45Bu+4DYjI2Tk3
+        AFaekIqtwdlJO3mgrYkyy0OnG14vLWDyyda8kJ8ROetJxGVOnSw4jbLB7Fw+JuzzpkdqOle2NiJbOerm
+        9NKi9RXakeKGJ+TXuDXPjlhIilPsSAhNk1tUoGz6rE1Wn5Vbudg+W7ZzftGGKrVvXpNw5m3Ny6wA0Qyj
+        bHI3K0rYSMcy2CAfybmOtCVlkxXYWV1BCPvFTD7Jhldx5CdJ2Ct0XRfBnDQSCr8Relm2juz0E3RxWfNZ
+        G7fbI+w3VFLt9o2tM9ZUckcdO8BpnNc0BmR5FOm0TQvlYKMwuS2huM8Q9pVUYQ/y1eiSY85nHQnOw87y
+        wTZAicgMmn1GF9XLDbavw+2jjZh8kg1Pwt42PHQKBwRaNoSloA5fNH8nfWkeA6nkuxxQtjQHll20AAMc
+        t6cDYpCBgDxDvkptqcjjhnfaTEc6MwtOZmD5VYu76fy5nXTmzCqdP6eTznM4N4LJzpsd5RmwnzKjSp+5
+        t4uueqBH2o/DXSLGBoBTu+SAfKKjDl9yokuOdMxwo695BZw7e1aVvvpgD219Y4iGj45R/3uj1DcMHHVp
+        vqzpwHtH6fCRMdrYfZiuWKQDeBmnStj6gQ+h3//fUecuOfkdN4Ad5fSkO9upqXuQqxJt3T0keOlNBg/G
+        y5wCKPu8k2/uPUzb9g5LvaWv99MH/9hOl1uEGelMn9lzPt2aj8hPRJB/9q9dsmbxLHzhIJV+u50+8ZcO
+        OuXuSgan3t3BQKqA7OPTO6h0Sxs1dunAnTenSl/gPcI2uGyfDDfzeKVdvDHROW83PFnzst40FMP6A7T8
+        MSZw8+r9XI3o6ge6ZQnAwRgX58pYt0jRxid5oH6w9A2p/+Nlb9KkeyoS+hrmuuH5TY+BemHmEx11csnx
+        a14Jy26MPGSch1MfuquDtu8fpv2HjshMwrmwUcFObW3AvEzSbtnxz5nVSePj47SmekiWUDb03aC7vJB3
+        l5wdKda8v+G5oy5GfBx9jkMeRxieeVveoZN5ILyjRjKyDwhkQBSE6zsGuJVxOpdPgy8i9Fmvew3buTbR
+        d2bmk1xv41dadCyzZnmdiSv5eCv9oUxT6/ZyFZKdunRbmdd7Rda8Is4fW4Z1fzUfc3iue3I3le7YQV/m
+        9q2/uF896mzNJ/p6O5F8cALHEmbowvs6qXzgPQlZDMJNK/fRTav2M5AeP26s30u/5hQPTgA5/3kwL8fa
+        t5l3EwDyeLFJFvbZo87ADrj8Bfd20qULuqlv6Cibn/in++CInCIX3qfhHwNhPyXpmvdfb0FYSduOi9A7
+        vaZKP+KdGc+hkTGaWruXvsaXnLmb32HJuMg1fT/wvxw105velvq/4VPjyKjKv/14r5wc1qfMPvtiaz5Z
+        2At5OeqMsJHX8hS+xn7vaT2e7tzwlpztp/IRVfp9Gy1r6xc5SL0f8CxpfZdKv2uj01D/5u00nzdOPNc+
+        ukuWVlhymvrrLZNPd7018ph1BziAQcAd3shfv3wPlW7fIfsANi7s+nhAbmxsbALhWI5nehMPHg+abKC3
+        lumWtXpnuPbRXiWPfnm27ZYZh33S6214q1Pinjy/iFz3lJJ/bd+wvJyUbi/TNx7ZRQcGdR/IEy4Cnt39
+        R+grf+uRAfw8r/EuXu940BbI29EqEyAzb+d8okuOhb2Ql7DX0LclgLew7y/VNY9nH19wVpT7aXR0TMog
+        htk1GNl8eZzzeIaPjNKz5QE6ODQq5fHxMfomhz0uP9avDXx8zic66uI1ryNuqZDnsP/ukzrzqZ6vL7E1
+        7wbeRV8gn+zrbfxKmwXCDx8gLpjbRbXtA9Tx9oi8mb2yZ5he3TNEPe+O0GE+Aew19l1L+Vg0mG5wZJR2
+        vjMi9VAf7VS4vSe29dE5TBwvTNovDwAj7Pa7ZOaTrHn/VheTx+g7YHPD1RZ3eRxvqyqDMhArK4fkJeeC
+        e7tkHb8fcJbf1nBA6q3g+qurg3R381v0kT+1y9udXHL8rOtAyIbnbnhpX2l92LvOPdQJXE3xXh4/C7by
+        a+2tbfRpvqEJeDMUWD6S4zr8OM9y/GzoHqSP/hkvSFGfbtbj3R6frts2JVzz+bc65BF+CP2LOSRx5G3h
+        6ygebGB4Fr14kGeuI+PwsYDI+bsjb/UbOgdpMp/5aN/bRgOg5DXsE11v9Zz3R53MvnZumw+cwweJVl6v
+        +qjzi186SCfzW1q8VOSYispKpps+zOH9j9f0UmT1m7oPyzeCS0De2SlQdhteynM+fMBUZ5V8yBuJyTUV
+        uv7ZPVxFHxxV1zzMuzSHdFyvqD5S/E3etx7rlQ1SHub/w3++SWfwUWp2cR3A3/DkqEv1Shvd8ADvQJTH
+        u/gZfM/Hbe+WtQfomod65AIkr6OYKZsx14bmA67kDW3KjIpcZXGz+84Tu7m9imyo3q5wzWvYJ/vFJhP2
+        znmQNuJIQR6O4tKD9Yub3pWLevyXGF/P5RVxvlsG4JzZWv8s3kOucO1CZ30rrD0L+5Rfb6MNzy43etkJ
+        8IPBNjYgXiYwO7VVmULtrK28vAjajqx5F/btSa63MXnuOHY271Q8CAFMSAYkkA8EgzzWW9sTB8Dkamth
+        n/xXWl3z3DnCDk5YCMIZF4IWiiY3GyEvyNuaDcpZvU9B1OWljvSn8njmk/z5afZ665wBeY+sQ+psnIc+
+        KmNQOAVU5/RSJ9eO2MX1s21lwj7lK60nb05mMNGxDHydnFxwnPLcoAAS9rjeMvl0r7SePICOXV7S3Oyz
+        3EI6AHLVZdN8/r/JJkLXvJ3zKf8gyYc9wjbkdRasrE55HUjEMiHlbEUX6a2NWFck9/XDhgfyST9j2W4v
+        Gxkc8mk08wWQtS2plQPistnnEdvHdsjHN7z259cmCHs383bOxwg7NsrBMT87Pg95ZC8DZvoweNIO5HF9
+        DytDr7A1n2zmw6dr55A4j7w5pfBkYniyJlMbHQTktb0M4npA3K7pJR/t9ul+sWHyPuyd8x7BMZ1Ncy7O
+        B3uTx3axPrZRudnH/QQYeXzMSHTU5dd8IKBOmWMTHczbx+QFbmazCPp8W9aeyTH7IL9wfUeio85dcizs
+        zRlbvwHsFMg4WIjGzmaRJWoyIxnXsXZ82bWNFN/w8J8Nkv7trZIPzmQB4uZ4loAOSqTzeVcusvcyTn0Z
+        eejNNhx1Cxp3JPyvZWs76ZQa9zt53iEHP0PeOXVQUnGa86JDGuXjsrUr+RhOZvauDshPntVD8xo7qNyy
+        8sSTLzfXtd5VW6bS9Ddock3VAz9QIp0kaSXo7nEpv9d72XFiktU1ZMpRHw74Te+kWQdoZv2r1NZUd+LJ
+        d2x7aeechQ/RtFVv089XH6YbGhiNQ5JOWzeoZZefJjqF6W6ErStPhY2khwTTGtiG9Ui1LtrlsmtL6qJt
+        2Dk95ChD91P251cr99G8xQ9ST6V84v8v7ShRy7atzw001S3t37RxXf/W5kaPLU0NLr8+IxedS19oUR1s
+        tzSrveR93SKoLq6b1bOO+9y0YV3/xhVP97e1voC/Y1mS970YVPoPKBF+1dynutwAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="radioButton_tunnel.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAD8AAAA/CAYAAABXXxDfAAAABGdBTUEAALGeYUxB9wAAACBjSFJNAACH
+        EAAAjBIAAP1NAACBPgAAWesAARIPAAA85gAAGc66ySIyAAABJmlDQ1BBZG9iZSBSR0IgKDE5OTgpAAAo
+        z2NgYDJwdHFyZRJgYMjNKykKcndSiIiMUmA/z8DGwMwABonJxQWOAQE+IHZefl4qAwb4do2BEURf1gWZ
+        xUAa4EouKCoB0n+A2CgltTiZgYHRAMjOLi8pAIozzgGyRZKywewNIHZRSJAzkH0EyOZLh7CvgNhJEPYT
+        ELsI6Akg+wtIfTqYzcQBNgfClgGxS1IrQPYyOOcXVBZlpmeUKBhaWloqOKbkJ6UqBFcWl6TmFit45iXn
+        FxXkFyWWpKYA1ULcBwaCEIWgENMAarTQZKAyAMUDhPU5EBy+jGJnEGIIkFxaVAZlMjIZE+YjzJgjwcDg
+        v5SBgeUPQsykl4FhgQ4DA/9UhJiaIQODgD4Dw745AMDGT/0ZOjZcAAAACXBIWXMAAAsTAAALEwEAmpwY
+        AAARr0lEQVRoQ+VaC3hU1bUeSCCQBBJCyJOQFwkhBBAQpIhW66VWrxZ7q1hoBamtSsu9baHXB4r9KhW9
+        KFY+ka8Iorf3frain1apPLRiBalKNZm8CIQ85pwzZx6ZSSaZ9zPrrrXOTAzJDgkh3Hsr68ufObPPOvvs
+        f629117rnNEBwGULYePlAmHj5QJh4+UCYWN3dzdDdO6igf2ebjq7rNrheKfa0dFS63Hr9Y1n/j3o9Yr1
+        LyGEjZeSfGNr63dOyhJ07H8dnPfeD11PPwsNsgyVLc3bIBwWXnOpIGyMkR9JUL8dNtvoSq8n0H3gEDTj
+        rQlnEd2bt0C91wOtslzSdyyXEsLGSCTCnyISwwX1V21Sn1BVFWzTSsAwdgIohWUgZ04DAw7DffwEVHlc
+        x/43p7+wkciLCAwX1KfJZJpSFwlBcMtT7G0jElfQCGSAJt1ocN36XWhyu3AJSN/gMUSvu5To1xAbMBlg
+        JMD9hUK6qo72P7dXVoNxHHo8PReU/FKNPELG40Yciu8Pr0FlKKg62u26bvg/JD9SoD6bDIYFDX4/+H60
+        jkkaC4n4dFCyC0CZWgxKwQwwJEyEzor5IJtVqDIq63ksvcZ1KSBsHEkEcA3rPa5q19Gj0Iq3k3PzwFiE
+        az09G1rHp4CUkonGmAnGApr+Ogjt2AE1kbC/zWIdI+pvJCFsHAnEvN5gMNzW5OwC9823QYtuFBLHaT4h
+        DaTCEvAcOw6W5XeAYdQYUNAgUko6WDJzoO3sGdC3WbdTTtB3JsXQ937DgbBRdLMLBfXjdHTq9MGAxbf/
+        Dd7WjNNwiueXsIfbn9+JKgDe2lr8PgqUzHycATM4GAYffATqwmGQFSWD+hHFEmq/WAgbRwp1RuMG2WYF
+        x7xFuLUlotdxbcclgFw+BzCgoYom1rX346xA4+B5JSMX5DHjwfF5JVQ5u96MBIPcl8i4FwthI3UusvZQ
+        QX1YzeaUmnAoHNi+g72pFGCQyy3kGeA+fARVAGd1mD+DViu0TpzM015BA5CO987vwxlMfM7K8kJU6TfG
+        kYCwsa+VLxS0VivbrP/V1nAarGlZIGNQI1LkXfWW5XgLJE7oRv9HJ4B923ZtaZCRphaxrvftg6D3+xs8
+        Tuc546LjkYCw8WIhyfL0+lAIAhs3aYQwmisZU5FQHPjqalElRlwDSSQcAqkYM79xSWyo1rix0LnkOmhp
+        t0OdbLgDVbBvyhtGZr0ThI0Xg3AgoKvq6jzW+elnIMePR9L5oOI2Rp603vevqKJJb/IxAzhee52DodIr
+        MAb2vQz6SMDWbrNy//+vyZ+VpGvP+LzgW3X3l15PyQJD8mQIWMyo0p94jDz9V666FvOB0ex9KTEV7MVl
+        YFQMUGNWH8DTsfuMRozr9X1YEDYOFz6XS1cV8DV5MKCRp5XcYlzDM9kI7b/Ziioo3REheQKJ+6OPtQCZ
+        k495f6m29W39D6jtDodNqmk8qtC94hCJ0eNhQ9g4XNQr8g9bHQ7o+voyaB6dgN6biWt4IhgwfY1gessS
+        CQuJE2Ki3rGSjUdbn5yWCWbcBdpr60Hfbt/THQ4J7z0cCBtjwAENCaRrb2sbqw+F/IEXX+b8XcaExZhX
+        yuu2643XUQUFiZ+PPIHEJ8vQlDAeiWf17BL+e+6H+qAfmmSpFFVGJO8XNg4HerPpt6qhFdqwQmvB9FUu
+        Rq/r4kG5hirUqEQiDBHpHkRV2x5+hA1HRZAxK5/rAucHf4VKr/u4f4RqfmHjUIGD5U+TqmbWcq2+lb0k
+        F5VjAVPEa939yWeoghJBWlH0I9wHJCGXB1ox25OSUzjtbcUU2HvTt6HR5YRTknQ9qlx02StsjAEHIszg
+        YqDzGId0Ve32P9lrasGEHjem5XKEJyNY7rwLu9Gi+IWQJ5A4du1m76tY86tY+pIxffvfBKwXmp0Oh3DM
+        FwJhY2+ISMdA51skae6pUBAC634WnaaYn0/OgRbM4QPNzaiibW3DIU//lfJ5IMWN4+kvj00C5/yrQLJa
+        oEZR1uDp2Oyj6B9P3y8EwsbeoM5FoHNBn49q9cqu4ydwfWNlljWNAxQZwbaBtmUUZID6GvEhCOnGQNJ1
+        4F3tsRcuI5XiCR6HXtgN1ZFIp92qJT4I2vcJPeMeCoSNQ0WDLK8424m1+k1Uq0cTk6QUMGRPhZDbhSpR
+        4r3E7XRBjb4a3sNc4MDb78Chdw/CScwG27C4GUhM3/o2P+TkWTVRq/mtp89Ata1tG95AOLahIHYwqnfj
+        UNDV0UG1eof/1f28FulZnDF/OnvdsXcfqpwrb+x/He5Z+0NYuOBKyM3OgdQJE2FCUhJMTJ4AmelTYHb5
+        LFjx3dth1wu7oL29PXqVJr5Tp9i4xim5oKIB6B6BjQ9AfTgIkqJkoopwdg4GIbGhoNZofFQxm8Ax50po
+        xUSGvG7AYkTG77ih9cibb70FS5YsgbFx8TAGkZOVDSXF06GsdAbMnFHGKC0phWlT8yB5fCK6Qwdl+H37
+        M9ujPWhivXc9b3dGTJiMWCQp8QngwJ2kytn5FtUTInKDQUgsBtEF1G61WJJrIqHu4I7n2QsKprDK1EI+
+        dh18D1U0Wb9+PZNJRg/PQs/OnlUBs2aWD4gK1JmDOplTMvi6ZTf8U89yCFqsmD9MAjl1SnTrw8i/cjXW
+        /G44K8lzUEU43vOhH+EYRMoEOqe3Wl6yNDaCKSsPpJQM9LpWtanLbsbTmixfvpwJlJSUQMXs2UKyA4GM
+        QKDrpxcWgYIZH4n9iafYwFTzqzmFbADPwcOg93k/97nd/TgMBmEjkaStTERcVpSC+nAEQg8/Bqfxcsrk
+        6PkbDSp4qh5VANauvZsHPmvWLEZ5uZjkYLhizlxeKhV47A0Gue8WLHgM45LZ+5RBuq7DOqKrE+pl6SY8
+        3W87Ph/6ET8fMHPnWt3x6UlQxiSCgTyP5Cng2X/6c1QBePGlPUy8vGwme09ESgTSJ/Rtnzt7Dve3+q7V
+        3L/n7be1rS+vmJMfTnxeegWqQ0GTw27ncfZ12kDoR5AaB2prlKQbGz1u8GDVxcULEm9NzYDmiWkAgQCY
+        nV0waUISR/PB1jdhTsVsKMZpnThuPIwfmwCJCeMgYcxYXvN0fcx4ZBQywKGjH+IwMPHBeoFqfvK+nJgC
+        9mnTQTVIoDebH6JxDhXnfOltld6gc/QcTe/3yd4/v8vWlvKKQMKbkxG6nn0OVQA2bd7Eg5xTMThxmtIp
+        uN3lYvRf/5OfwO9f+U/Y/8fX4MmtW2Ep7g7xo+NgBkZ9MgJhQlIyLLuOUnoMftXV2trHgkfF6M9L7vEn
+        oC4SDquqmoQqPK1FXHpjUOIEOl8nS/e14P7rXPpNaIlPxOmOpea4JDDgFkfiDQZgVlkpej0LyfWfvr1B
+        U5nILJg3Hyq/qOTre4vP54NNDz7E6522RJoBtCXSDDlZqembV6zWtj50gJKWjXXFJLDX1EBlu3031Rs0
+        7r5rvC+GRLzDbo+vDgc9/pd/z56W6NVyfrHm9Vdf48EcPnwQxsbHIbkZiIHJE5G83Km835tNJr6WJZb7
+        90oIN/78FxA/Kg5m4/KIRf/HH/sVnwu0tKITMOefnN3j/cC6f4OGgB+w3piGKkI+vdHj+fOh2mzaZlKM
+        YC8ph5akVCxZy3DqjwZ50VI8rcmvH9sMo7G7inIifn7yo7EO2LXzBe3CWN7fFyT4SZF+ak4uX0vL5Du4
+        hcakbcODvMWy97GukHBMrmMfg97tOhzweHjs3REkOgCEFomBLjabzRm1kQgEf7ON1zo/kMQ9lrzuOXaM
+        B0Fy1/d/AEmYoQ3meQpwhfkFYFKjXu9LOgb8I3ns0c08/elamjELrpjH9QFJyNEJhvRskJMn9Tzx8d56
+        O9b8bjgjSYtRhd8hDAThWoiB1g6uoYP2Kj2oialarV6kbW3mVdrWE5MVt69gzwxGPjszC65deg1EQtrb
+        GiHxGFD27X2Jgx9F/Py8aRxM2ywWPkfStXsfj0fBuoIeedNxAJdiTQhrfqw/UEVInNAztUVokeVFDX4f
+        +O+5jztVyetpOdA8NhkCkpZ1xWTV91ZykTIU8kuXXA1Br0+7UEQ6BpS9L+7BWDKGyVP+P2/uXLC32fgc
+        CWkpWE9QXcH1RUISOCrmgmJSoVYx3o2nddiXEELSBHqvXulx1XV9cBRkVDNmFWBg0bze9tBmVDlXNPLJ
+        SPD85CnQXf21JeD3eLULRaRjQHnxd7sHJh/VoXqCxmWcWsSpLz/ufm4n1IQjTpvFqlWsQ/F8bK2flqQ7
+        zjo7wX3LclxLo3Ctl4KUnAaGjFwIR9dc7OYkQyVPCRCVtT3kBxEKjLTmz0eexPitW3nr42cKKZPBgtmn
+        tfEsVFstj+P00Aj39bwoyLm09+o23xtvRtfTl6+POnbu4pvxM4oLIE9RPrZdzZ97BV8TwHzd2dkFHgxQ
+        fdGFwYzkhed3RhOn2ULyOGY+9Oj1PD4FSZMByPuBhzdjzR8Go2JMRRU0wLkQkq81Kg/IeAPHgsXQNI5e
+        PpRq79XLKnr48k2HQJ4I08AnT0pjEnevXgOqUYW9e/byuUVXLoQli7/WD7QrbPzFBgxuVo7yNGPyp+UL
+        ycdGYVnzI23609qnJ78JieD4ogr0nZ3/HQkE+291eM05sFmtqbWRUMT/251sPbmohN+rk1Vdhw6iCkrM
+        4oOQp0yOIjSRXrzoKvjrhx9CF3r6lxs3chsZhEhREOyL9LTJrOPucsLHx47zcT55HtPifuSj3g+aLfzO
+        QMKan7xPhvCtWoM1vxeaZXkWqpzreW7oBb3N+io9HzPh/km1OlmR08h/vg1PR2UQ8rOxjKV0lLaoKZPT
+        4Zmnn2adKkxNS4unMxFKXs5X/NC5OIw1G36mVYsrV9zJ1y2cv0BIPjYSes9PjqLARwGQ9n7PgXcB65JK
+        r9Ol8ew77akRa/UZdeEghH75cHT6lPF7dcrm3HWnuHN66dJNEJBPmTABp/hMSJ04EeIwLf0eDrijvYPP
+        b970CGeAGelT4AqcESLCfVFUUMgVnh+3RZfTyVGf2jpsdu7zHPI0HpRwKAQSTXus+cn79J7fefV10Gq3
+        Qb1koKctGOzCiNCX5MPBgK6y03GCanUj5sz0Xp2e0JARrPf9lDsmrgORX/2Du2AU6pJ3rsSC5cA773C7
+        Fdfs1biGqZ2qNFr/IqIikPfpuuef28F9bd/2DH932KMPOPuQ5zGhOP7wR8379Fu/6EPVINf8XrXD1oaO
+        pjUfxtbodG+SpBtO+7zgX7WWCRNxOTUTWjB1DFrbuFMmPQB52r5oYFse39IziKe2PsltBFrH5EXy/IWA
+        ri3AQOd2u7nPW26+GT4/+Xc+Hog8/VcWXYPLNU4L1klY85fMAqMsQ61ZJU8yZ/5Hz7+q/L5W7+H3tL0S
+        Axz9gIgsZt8Se6/ei3gf8sFAAJ58Yit89umn/J1k8yOPQlZ6Bq/RG5d9E264/hvDRjFO9aN/Ocr9tmI1
+        d/ZMIx+LyPO4UFwffaQ98ckp4ByFapHgU9uhtjviw7qC3+4w+VOy/ONmeq9+/Y3QPDoeiZeANH4SSLMX
+        cEcXKiGEoh2OiKCtIfp2/4LEfO86zZk49fk9f2o6tNXVQ6Xd9hzVLTqzxZJcG/A5/L/bo9XqBVqBIE/M
+        AGXeVeA+eAi8738AnkOHEUfEOHwEfEfe7/nuf+99gI//FsWJi8ffPoEQptm979dzLALe33vkL2D9l5Vg
+        GJ+k/cYnuvX5f7wOGlxdIKlqsU6vGtcYGhqgs3wByOhtyuQ0ZfotfB5aLgFa45Mwav4DgcY7KpF/Asc7
+        FvEhZOeDPGoM2NGhX1gsv9J9Zm971oxWUuMS+Vm4khdVpEg5jX4Th8fUnlv0j4Oc6Cf/pD3GB4HepzgQ
+        3vcKfGRRX9HVm0xrDEYFXAsX8/pQ03OwbM2KIvsrgCiXKTn8nF/VjQXbJydAb1Uf1RkVJf4T2XDMp68F
+        1+KvQ/vUQrAVzwTb9PKvFvKmQ3vJTIA/HYCTRiksyYZUjvaKJKUeb2o6bLTawFlbC84zp8HZ+FXBGXAR
+        H4zyFlmBvxuNLWcaG/n3vEz+coWw8XKBsPHyAOj+B8UevP1eIrV9AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="radioButton_highway.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAD8AAAA/CAYAAABXXxDfAAAABGdBTUEAALGeYUxB9wAAACBjSFJNAACH
+        EAAAjBIAAP1NAACBPgAAWesAARIPAAA85gAAGc66ySIyAAABJmlDQ1BBZG9iZSBSR0IgKDE5OTgpAAAo
+        z2NgYDJwdHFyZRJgYMjNKykKcndSiIiMUmA/z8DGwMwABonJxQWOAQE+IHZefl4qAwb4do2BEURf1gWZ
+        xUAa4EouKCoB0n+A2CgltTiZgYHRAMjOLi8pAIozzgGyRZKywewNIHZRSJAzkH0EyOZLh7CvgNhJEPYT
+        ELsI6Akg+wtIfTqYzcQBNgfClgGxS1IrQPYyOOcXVBZlpmeUKBhaWloqOKbkJ6UqBFcWl6TmFit45iXn
+        FxXkFyWWpKYA1ULcBwaCEIWgENMAarTQZKAyAMUDhPU5EBy+jGJnEGIIkFxaVAZlMjIZE+YjzJgjwcDg
+        v5SBgeUPQsykl4FhgQ4DA/9UhJiaIQODgD4Dw745AMDGT/0ZOjZcAAAACXBIWXMAAAsTAAALEwEAmpwY
+        AAAMm0lEQVRoQ81baVRW1Ro+rVbDXd3WvV1v3W517zItvU3XWrVyQBFzChQk55BQGUUGAVGGHConFBUs
+        RRFEUdHUxAFyQAkVU8gcUHHOcg7U+j415Rb43ufd5xy/gX3gqx8enrWedTh7+s5z9t7v++59NgoR/SE+
+        EtfvvBLQ9kab6dGWrL3Flo0Hyy35B/a6wDKDvxuirdz6g2WWDfitmcUbLI/FD7yhBHS8KHs+VyhNdIVK
+        YHsKKsjCn0Rbj++jnAPFlHOklBYfdoW7NcryGmZOxS5asn877bl4hm7X/kZt0mP4EaTP2Bilia7wzRmj
+        LLhSz+zJpLz/OvHLUII7GjPEnZSgDqT4Pk+KT3OVw94mxQ919fv+rUkJ7YzynerXt2dgO1L836C0vUVU
+        Q3TD/rl+D6WJrnB9xTeWDacOkTLwVVLGfUDKh/7gEGMmDiYlyY/6LU+joavnCT45JYxeSh9Dw1bhHnRf
+        +AkpY/pK6tu3jb/597hcUDs6dPn8/RdfcuyoZXZZER6gIz3g8KAGjPSkZ6aNRFUb3BZMpOTta7Q7oivW
+        n0mJ7U3K2P7yNpwZ2pEyy7bdf/GbDx+0zC3fjmHo7pr40C7UY/E0VLXhlfTRFJyv2g3Gb3V19LcpoaSM
+        wguQtWHP5PdJCffA/C8xQXzFAcu8b4pdFx/oRtGFS1HVhpYpURSwcp52p6J95kRSRnSVt2FPTXzu/h1N
+        XHwyiHLzy7ehqg3PTgunAXmfancqAvMz8aJg1GTt2FMTv3SfGeIPQ/w+F8UnDiIlypNKzh5DVRuaTQmm
+        PnmztDsVKbs2wDO4Lj7326YufvR7osyVm8I73sNjHw8jz9zp2p2KvINfQ1QTH/abeNi7Kj6yJ70wWwQj
+        DnhwYgB1zZmq3akoP3eGlBgfdbTI2tKpizdj2P8u8SGdyXvpDFRzhPKhH3lkT9LuVFjv3KZHPhpOSlyf
+        +u3Y03Txrhq84W4Uv3kFqtnhLhqBP3eDdXfGa5+OJSWih7wtnWYOe5etfbKf8PGL9+9CNRtqa+tIie9L
+        b88fp6XY0H9luhoOy9rTaarBc3XYJw4UQUvpDydRzYY7v/4KQ+hLb8xN1FJsSCpaJUaLtD2dmnhTXJ3L
+        wx69yzH9+Z+vopoNll9+ES/lZcT2zlhxaA8pYe+oo0bWJtPMnmfxGa6Ij+5F/0iJoNq7dahmw483rfAC
+        XtRydpyWYsOhK+eEe1TGDpC3yTR1zrOfd0V8WBfqitWaMy7D57MLbD6zvgusqa2lxz8JhsvzlrfJNHPY
+        u2zwhrWncVttKzcdt27fwYvpSv+aEaWlOMIjG8vbUA95m0yzh70weLwI4R4K6iSn/1t4WD9qmRpFzWdE
+        CrZMjaS/T0LPBrRFfQ9qgTQm5z0PvoAXosSiTa4ra5MZj2kR1c3ECI97fnAbcs+aRCk7N9LkHesFPy5Z
+        RxO/Wkuf4Dpl9yaK3bychqzNIH/mFxk0BAxcn4W8QpTNF/dMztPzk7atQv6XDm2J9neup6k7N9DzeJlK
+        wJsmujoW3/2flFG2HUn3F77LZ5Li29ycCO+ewfugLbWA0eqTN5N6L08lz88S0Bs7UYQotbSAuqTFUvfF
+        U/8Qu2A9sOV0hWgrqmAxeS2YQD4Q7Z03m56YHAJ7096kYQ/xwtWN6IY43FdEcUoofHOPZ2jaVxtRhOjR
+        SYGkeD2LHmrpxBakDHoVIWx3GD0YtX6t1DTnMt2b0aA16mbHs9NGqOnwHiIG4K0unvPm+vnOMGi8gakx
+        pg/1yJlBiVs+F67sJfjxiHVZFLx2AQV9AeIanp9FXRdNxkvzpgeSB9PAFXNoxNqFFLRmvmAIyoXh/snx
+        H9Bfx/lRctFKem5GhGrknKy9aa5OKn4ieju6NymBiM2Ht6Olh3ajeH2UfF8JgwVrntCfauocAyAdQesX
+        kTLkdfwGQt0EBDwThtYTb47B04e9s3idiXi4qHdp59mjKF4fyw/sUPffEf5WVvFHl/pI3VWIMh3QHtrS
+        RTuLN2tVlyEWNgbiIerBRD+6ZPkJxesjs7xIFT+6D3178axI4/7XySg4doCUkbApSVgcGYg3bWHToPhI
+        T3iBWBSVIw0+XIiP6UW7vj8h0pzFn7x6GYYN81z2IcPsCK/BYR/SlXouqb97o2NqyUbYhPZiahSdUaeG
+        s/jaulp6ahJc2igvtGkg3qyFTYM9H9iJYgqXoagcHLWxQVQie1DhqYMizVk8o1PGBLhTuDcj8aYZPCPx
+        yWBIZ8pGvhHGbFmBF4SeD+9Ga46UizR78Xc5AQiBW1SCJBsbps95o2EvLL0XlWpzWYbogiWoC/Eh79Cy
+        8lKRxoLtXwAj/evNKIeFDBZHMvFNb87HwdKP96fqW/xccoxYn426cGPBHrSorESkycRvOn0QUwORYNJg
+        VXRTEN+gn4/wohdnx6OYMYatzkDdjmKj8rM9W0SaTPx316vUACe+nyraSXzTivCYGMreuY6foZwxIG8O
+        ymE44wXM2FUg0uyF6+Lr6u7S0ykjYfF7qaKdxJs37I0MXmBnxPYrUYyhy3AEr86UUD6t4YY1+jqRJhPP
+        4A8bYjEjE2/WZoZcvD8EvYMe0ffpdbvtiJ65KeqKDnH7+OJVIs152Os1Izbm4oU6fbw0dc4bDfsEGKZR
+        fWjP+TMoZgz3hR/Df6M3gzrQmE1qPOAsnsmYV7ZV2AbxqdtJvDlz3sjgxb5HD00cTtdv/4Jixmi3AMEL
+        f42FxY8uzNFS5eKLTh2GEe0JF2pn8U0f9jLxEZ70SnoCijSMN+YloSwWLRj2YesytVS5+MofL2EBBIuP
+        5W898aYYPKMIL7gL9VvueNpChv+kjUYg1APDuSP5f/6ZlioXf+vXGvrzpCDEDz71xJs37J3F8xGxoe40
+        frO+Ty83dowWqdGkRGMoh3amvnB7OmTiGW9mYKQgFG4SPS8VzzF9WBfKO6SGq0bi+dTVc8J3ewrx3sts
+        MYGReP/Vc/Fbdhbf9DnvLH4sDFKcL+2/om5OGOFWTQ09ybuvfOYutAt1z5mi5dQXr7+AycX5ju7OzGEv
+        FR/rS49+FEzWmjsoYoyfbt+iv4jTF97C3XXKtH3LMxK/5nC5ujusf7k11eDJrH2kF7VKazimZ1TdtNKf
+        JqA8i4e7a4s1uw4j8YerLqi7t/qXWzOHvdTP8+5NdgqyG8YPP1WLLWvev+O9+//OSdJyjMXzl9snpoSJ
+        b/pNs+cDO1EUQtHGcLz6suqzx6AnI3tgBThayzEWz2iXOR7TRDumZvqcdxYf7E7zyouQ3TAqqs5j+PZV
+        NyajetK/Z0bfE+ksXE9nDF+DZbAwelg/mDrsncUnwhBFeVLxd/J9envsu3QGQx7zfSzW6HB3T08LpzsY
+        1gyZeN1hTi/eSMowzeKbOezrzfnRHHr60QXrz8huGF+fO0FKjJc69GN6UbNJIXSj5n8iTyaeycg//q2w
+        EUK4mcPe8aNFgLD0LVNHIatxlJw9okZ3fFIr1psex0LoGtwfQyacyThxDbYiCaNlDF5akok97+jnIT7E
+        g3ovadzSM748eQAvC6Eqi4e7e3hCAF3UzuXKhDMZtXV36amUcNXi6+LNX9VBPAxR3CbH8/RGWH0EActI
+        WO3kQehFuDu4ve+uV4s8mXCmjs5iH4DrauJNG/b2cz7Yg7Jw7wqWHeKT1bwtBfH8OSphgHB/DJlwpo7g
+        tVmqxW8y4nmfPtr73je3xrBo/w70Hp+0gvgEiI/vy/8oJPJkwnUyUncXEv9fj/nDXsx5iIjrSw99OJR+
+        vHUTWY1jLv9jEv8LGfdeIozXKG/a+/1pkScTrZPx5akKdVcnAfbCLINXdLTCMof31lj8iG7Udn7909NG
+        yN1fCn/tBvGIDfhcffi7dLa6SsttHA+Pg5+P9cHy2Z2y926//+JLT1Va5vPw5bNycHNuWJntOFNJ204d
+        FntugiedWUElp49Q4NqFMHjakXL+EhPjQ9N3FCDvKG1FGSNuF+1WULOpiPFjYSiHvkWrK8ruv/io/GyL
+        tfY31WojpucztsrwDujRdiqHtgX56kTO40NF3HPssph8iBGhsVqG6zVA/o0Y1Hm/DbWaJY6u3n/xLLgY
+        kdq5mzfIZ8F4aj0rilqlx1LrtFgsa2NAvsaJK6e1Rp5+/3J6HL32aTy9OieeXmPi75dEPpeNU8vfI9/b
+        0l6cHUOvpEZQaN5sPAbRzJINfJE+Y2OUJrpCJdLzghLf+0Z2+XbrietV1mPVF6zHrl22Vl4FcT2mXSuv
+        XbEexd9Hr16yVlbz1UYu63xfiXKO+ZesR7R7Pe1Y1QXrcfxm+NoFN5Sg9pdkz9c4Sfk/dZ48DbZX9EMA
+        AAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
